update cropper.js and fix avatar slicing

--- a/app/assets/stylesheets/zammad.css.scss
+++ b/app/assets/stylesheets/zammad.css.scss
@@ -4764,7 +4764,7 @@ label + .wizard-buttonList {
 .imageCropper-image {
   max-width: 100%;
   max-height: 100%;
-  opacity: 0;
+  // opacity: 0;
 }
 
 .imageCropper-preview {
